--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <section>
-    <img src="index_image.jfif" alt="Books and heart illustration">
+    <img src="OIP (1).jfif" alt="Books and heart illustration">
   </section>
 
   <footer>
