--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adriana Beltran - About</title>
-  <link rel="stylesheet" href="main.css"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Eco-friendly products for sustainable living">
+    <title>Eco-friendly Products</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Adriana Beltran</h1>
-  </header>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="school.html">School</a></li>
-    </ul>
-  </nav>
+    <!-- Header -->
+    <header>
+        <h1>Sustainability Starts at Home</h1>
+    </header>
 
-  <section>
-    <p>Hello, my name is Adriana. This is my second year at El Camino College. I'm a business marketing major.</p>
+    <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
-    <h2>When I Have Free Time</h2>
-    <ol>
-      <li>Reading books and watching TV shows/movies</li>
-      <li>Exercising (running, walking, or yoga)</li>
-      <li>Going out with friends and family</li>
-    </ol>
+    <!-- Main Content -->
+    <main>
+        <section>
+            <h2>Featured Eco-friendly Products</h2>
+            <p>Explore our collection of sustainable household items.</p>
+            <button>Shop Now</button>
+        </section>
+    </main>
 
-    <p>My favorite website is <a href="https://www.youtube.com/" target="_blank">YouTube</a>.</p>
-  </section>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Eco-friendly Products | Follow us on 
+            <a href="#">Instagram</a>, <a href="#">Facebook</a>
+        </p>
+    </footer>
 
-  <section>
-    <img src="OIP (1).jfif" alt="Books and heart illustration">
-  </section>
-
-  <footer>
-    <p>Last updated on September 18, 2024</p>
-  </footer>
 </body>
 </html>
