--- a/index(eco).html
+++ b/index(eco).html
@@ -21,10 +21,10 @@
             <li><a href="about(eco).html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="gallery.html">Gallery</a></li> 
+            <li><a href="gallery.html">Gallery</a></li> <!-- Add this if you have a gallery page -->
         </ul>
     </nav>
-
+    
     <!-- Main Content -->
     <main>
         <section>
